# docunative

./: .env.example  .env.example.dev  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PULL_REQUEST_DESCRIPTION.md  PULL_REQUEST_WRITER.md  README.md  README_ROADMAP.md  pyproject.toml  pytest.ini  requirements.txt  run_eval_pipeline.sh
.github/: PULL_REQUEST_TEMPLATE.md
dataset/builder/: cohere_retry.py  document_translator.py  facts.py  qa_factory.py  qa_factory_llm.py  writer.py
dataset/output/: .gitkeep  de.jsonl  hi.jsonl  sw.jsonl
dataset/seeds/: employment.yaml  health_insurance.yaml  immigration_letter.yaml  lease.yaml
docs/: 17.md  PR-uv-migration.md  dataset-generation-guide.md  dataset-writer-parallelism.md  essential-libraries.md  makefile-commands.md  makefile-update-models.md  path-consistency-fix.md  uv-development-guide.md  uv-migration-guide.md  uv-migration-summary.md
error analysis/: analyze_errors.py
error analysis/exports/: .gitignore
eval/: aggregate.py  eval_mkqa.py  evaluate.py  metrics.py  precompute_embeddings.py
eval/aggregate/: README.md  (+2 more)
models/: metrics.py  nli_check.py  pull_models.py  start_server.bat  start_server.sh
pipeline/: embed.py  extract.py  generate.py  nli.py  pipeline.py  retrieve.py  validate.py
reports/: analyze_timings.py
tests/: test_qa_factory_llm_parallel.py  test_smoke.py  test_writer_parallel.py
ui/: app.py
visualizations/: docunative_results.html  docunative_results_old.html  generate_charts.py  h1_comparison.html  h2_f1_comparison.html  recall_comparison.html  refusal_rate.html
(+9 files in other folders)
